[gd_scene load_steps=11 format=3 uid="uid://blsn8k1nqmel6"]

[ext_resource type="Texture2D" uid="uid://ctau1dh86qc2k" path="res://Assets/OS/WindowsModal/Directory.png" id="1_jro0p"]
[ext_resource type="Script" uid="uid://1kxel07t6foc" path="res://Scripts/Object/level_directory.gd" id="1_y3nib"]
[ext_resource type="FontFile" uid="uid://dtbj18147yd73" path="res://Assets/superstarorig_memesbruh03.ttf" id="2_5ugad"]
[ext_resource type="Texture2D" uid="uid://5a84qg8xl1ma" path="res://Assets/OS/WindowsModal/lock.png" id="3_om3im"]
[ext_resource type="AudioStream" uid="uid://5e0e87u1iew1" path="res://Assets/Sound/Helton Yan's Pixel Combat - Single Files/SWSH_MOVEMENT-Bubbly Passby_HY_PC-002.wav" id="4_fjppb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm7tw"]

[sub_resource type="Animation" id="Animation_fjppb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_om3im"]
resource_name = "Unlock"
length = 2.0
step = 0.117
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778, 0.888889, 1, 1.11111, 1.22222, 1.33333, 1.44444, 1.55556, 1.66667, 1.77778, 1.88889),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ugad"]
resource_name = "lock"
length = 2.0
step = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frikt"]
_data = {
&"RESET": SubResource("Animation_fjppb"),
&"Unlock": SubResource("Animation_om3im"),
&"lock": SubResource("Animation_5ugad")
}

[node name="Direcotry" type="Area2D" groups=["LevelChanger"]]
scale = Vector2(2, 2)
collision_mask = 4
script = ExtResource("1_y3nib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vm7tw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleLevel" type="Label" parent="Control"]
z_index = 50
layout_mode = 0
offset_left = -53.0
offset_top = -37.0
offset_right = 52.0
offset_bottom = -14.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5ugad")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jro0p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_frikt")
}

[node name="Lock" type="Sprite2D" parent="."]
texture = ExtResource("3_om3im")
hframes = 4
vframes = 5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fjppb")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="close_level" from="." to="." method="_on_close_level"]
